--- a/fetch/metadata/tools/fetch-metadata.conf.yml
+++ b/fetch/metadata/tools/fetch-metadata.conf.yml
@@ -21,7 +21,9 @@ cases:
       # The `audioWorklet` interface is only available in secure contexts
       # https://webaudio.github.io/web-audio-api/#BaseAudioContext
       audioworklet.https.sub.html: []
-      # TODO(jugglinmike) document rationale
+      # These requests do not necessarily induce preflight requests because
+      # preflight requests are only issued on the basis of the origin of the
+      # initial request.
       cors-preflight.sub.html: []
       # Interstitial locations in an HTTP redirect chain are not added to the
       # session history, so these requests cannot be initiated using the
@@ -110,7 +112,9 @@ cases:
         expected: cross-site
     template_axes:
       # Unused
-      # TODO(jugglinmike) document rationale
+      # These requests do not necessarily induce preflight requests because
+      # preflight requests are only issued on the basis of the origin of the
+      # initial request.
       cors-preflight.sub.html: []
       # Interstitial locations in an HTTP redirect chain are not added to the
       # session history, so these requests cannot be initiated using the
